Добавлен пример с классом clsManufactory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(examples/Storage_stress_test)
 add_subdirectory(examples/SKU_example)
 add_subdirectory(examples/Storage_example)
 add_subdirectory(examples/ManufactItem_example)
+add_subdirectory(examples/Manufactory_example)
