--- a/examples/SKU_example/CMakeLists.txt
+++ b/examples/SKU_example/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(SKU_example main.cpp)		# Сборка исполняемого файла с именем SKU_example из указанных модулей
-include_directories("${FROMA2_DIR}")		# Добавляет указанные каталоги к списку каталогов для поиска компилятором
-target_link_libraries(SKU_example froma2)	# Определение подключаемых компановщиком библиотек к исполняемому файлу
+set(PROGRAMM_NAME SKU_example)				# Имя программы
+add_executable("${PROGRAMM_NAME}" main.cpp)		# Сборка исполняемого файла с именем в переменной PROGRAMM_NAME из указанных модулей
+target_link_libraries("${PROGRAMM_NAME}" froma2)	# Определение подключаемых компановщиком библиотек к исполняемому файлу
