--- a/examples/Storage_stress_test/CMakeLists.txt
+++ b/examples/Storage_stress_test/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(Storage_stress_test main.cpp)		# Сборка исполняемого файла с именем Storage_stress_test из указанных модулей
-include_directories("${FROMA2_DIR}")				# Добавляет указанные каталоги к списку каталогов для поиска компилятором
-target_link_libraries(Storage_stress_test froma2)	# Определение подключаемых компановщиком библиотек к исполняемому файлу
+set(PROGRAMM_NAME Storage_stress_test)			# Имя программы
+add_executable("${PROGRAMM_NAME}" main.cpp)		# Сборка исполняемого файла с именем в переменной PROGRAMM_NAME из указанных модулей
+target_link_libraries("${PROGRAMM_NAME}" froma2)	# Определение подключаемых компановщиком библиотек к исполняемому файлу
