--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(examples/SKU_example)
 add_subdirectory(examples/Storage_example)
 add_subdirectory(examples/ManufactItem_example)
 add_subdirectory(examples/Manufactory_example)
+add_subdirectory(examples/Manufactory_stress_test)
