--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(examples/ManufactItem_example)
 add_subdirectory(examples/Manufactory_example)
 add_subdirectory(examples/Manufactory_stress_test)
 add_subdirectory(examples/Impex_example)
+add_subdirectory(examples/LongReal_test)
