Добавил пример с индикатором прогресса и оболочкой к нему

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(examples/Manufactory_example)
 add_subdirectory(examples/Manufactory_stress_test)
 add_subdirectory(examples/Impex_example)
 add_subdirectory(examples/LongReal_test)
+add_subdirectory(examples/Progress_example)
