--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(examples/Manufactory_stress_test)
 add_subdirectory(examples/Impex_example)
 add_subdirectory(examples/LongReal_test)
 add_subdirectory(examples/Progress_example)
+add_subdirectory(examples/Model_1)
